src/objects/EMP_Organization_Member_Beneficiary__c.object
<CustomObject>
    <fields>
        <fullName>Affiliation_to_SGSSS__c</fullName>
        <label>Affiliation to SGSSS</label>
        <picklist>
            <picklistValues>
                <fullName>Contributivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excepción</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vinculado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No afiliado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attend_school__c</fullName>
        <label>Attend school</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Centro_recuperacion_nutricional__c</fullName>
        <label>Centro recuperación nutricional</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Control_prenatal__c</fullName>
        <label>Control prenatal</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Crecimiento_y_desarrollo__c</fullName>
        <label>Crecimiento y desarrollo</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desmovilizados__c</fullName>
        <formula>IF(INCLUDES(Population_groups__c,&quot;Desmovilizados&quot;)=TRUE, &quot;Sí&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desmovilizados</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desplazados__c</fullName>
        <formula>IF(INCLUDES(Population_groups__c,&quot;Desplazados&quot;)=TRUE, &quot;Sí&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desplazados</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Differential_population__c</fullName>
        <label>Differential population</label>
        <picklist>
            <picklistValues>
                <fullName>Afrocolombiano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indígena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discapacitados__c</fullName>
        <formula>IF(INCLUDES(Population_groups__c,&quot;Discapacitados&quot;)=TRUE, &quot;Sí&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discapacitados</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Level__c</fullName>
        <label>Education Level</label>
        <picklist>
            <picklistValues>
                <fullName>Primaria Incompleta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primaria Completa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secundaria Incompleta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secundaria Completa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Técnico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tecnológico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profesional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posgrado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_relationship__c</fullName>
        <label>Family relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Jefe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cónyuge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hijo (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nieto (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Padre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hermano (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yerno o nuera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abuelo (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suegro (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tío (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sobrino (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primo (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuñado (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No pariente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicio doméstico</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Femenino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masculino</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <label>ID Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Type__c</fullName>
        <label>ID Type</label>
        <picklist>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NUIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menor sin identificación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adulto sin identificar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_member__c</fullName>
        <label>Is member</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LGTBI__c</fullName>
        <formula>IF(INCLUDES(Population_groups__c,&quot;LGTBI&quot;)=TRUE, &quot;Sí&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LGTBI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MANA_Infantil__c</fullName>
        <label>MANA Infantil</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marital_status__c</fullName>
        <label>Marital status</label>
        <picklist>
            <picklistValues>
                <fullName>Soltero (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casado (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viudo (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorciado (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separado (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unión libre</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Trabajador (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desempleado (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estudiante</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oficios del hogar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pensionado (a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Member__c</fullName>
        <label>Organization_Member</label>
        <referenceTo>EMP_Organization_Member__c</referenceTo>
        <relationshipLabel>EMP_OMBeneficiary_Organization_Member</relationshipLabel>
        <relationshipName>EMP_OMBeneficiary_Organization_Member</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_program__c</fullName>
        <label>Other program</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAE__c</fullName>
        <label>PAE</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Population_groups__c</fullName>
        <label>Population groups</label>
        <picklist>
            <picklistValues>
                <fullName>Desmovilizados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desplazados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discapacitados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGTBI</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Red_Unidos__c</fullName>
        <label>Red Unidos</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>EMP_Organization_Member_Beneficiary_Subm</relationshipLabel>
        <relationshipName>EMP_Organization_Member_Beneficiary_Subm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_activity__c</fullName>
        <label>Work activity</label>
        <picklist>
            <picklistValues>
                <fullName>Trabajador (a) independiente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empleado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jornalero(a) o peón</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empleado(a) doméstico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajador familiar sin remuneración</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>EMP Organization Member Beneficiary</label>
    <nameField>
        <displayFormat>EMPOMB-{000000}</displayFormat>
        <label>EMP Organization Member Beneficiary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMP Organization Member Beneficiaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>